--- a/infrastructure/driven-adapters/mongo-repository/build.gradle
+++ b/infrastructure/driven-adapters/mongo-repository/build.gradle
@@ -1,7 +1,10 @@
 dependencies {
     implementation project(':model')
     implementation 'org.springframework:spring-context'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.reactivecommons.utils:object-mapper-api:0.1.0'
     testImplementation 'org.reactivecommons.utils:object-mapper:0.1.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
 }
