--- a/infrastructure/driven-adapters/rest-consumer/build.gradle
+++ b/infrastructure/driven-adapters/rest-consumer/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
     implementation project(':model')
+    implementation project(':usecase')
+
     implementation 'org.springframework:spring-context'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
@@ -9,5 +11,9 @@ dependencies {
 
     testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
+    runtimeOnly('org.springframework.boot:spring-boot-devtools')
+    testImplementation 'com.tngtech.archunit:archunit:1.2.1'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
